# CroMaCk

./: .gitignore  LICENSE  README.md
CroMaCk/: CMakeLists.txt  CroMaCk.pro  CroMaCk.pro.user.22  CroMaCk.pro.user.4.10-pre1  CroMaCk.pro.user.4.9-pre1  main.cpp  main.qml  mainwindow.cpp  mainwindow.hpp
MediaConverter/: main.cpp  mainwindow.cpp  mainwindow.hpp
build-CroMaCk-Desktop-Debug/: CroMaCk  Makefile  moc_mainwindow.cpp  qrc_qml.cpp
